<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:background="@color/bckghome"
    >

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="150dp"
        android:layout_height="146dp"
        android:background="@drawable/login_pic"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnback"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_baseline_arrow_back_24"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lbllogintext1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/high_tower_text"
        android:text="@string/logintext1"
        android:textColor="@color/black"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="390dp"
        android:layout_height="368dp"
        android:layout_margin="10dp"
        android:layout_marginStart="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.608">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtloginusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:inputType="textEmailAddress"
            android:fontFamily="sans-serif"
            android:layout_marginRight="10dp"
            android:hint="Email"
            android:background="@drawable/rounded_textbox"
            android:textColor="@color/black1"
            android:textColorHint="@color/grey"
            android:textSize="20dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtloginpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="10dp"
            android:fontFamily="sans-serif"
            android:hint="@string/hintpassword"
            android:inputType="textPassword"
            android:textColor="@color/black1"
            android:textColorHint="@color/grey"
            android:background="@drawable/rounded_textbox"
            android:textSize="20dp"
            app:endIconMode="password_toggle"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="180dp"
            android:background="@drawable/rounded_corner"
            android:fontFamily="@font/high_tower_text"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/textlogin"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:foreground="?android:attr/selectableItemBackground"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtforgotpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:layout_marginBottom="15dp"
            android:text="@string/forgotpassword"
            android:textAlignment="center"
            android:fontFamily="sans-serif"
            android:textColor="@color/teal_700"
            android:textSize="20dp" />
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtaccout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/high_tower_text"
        android:text="@string/donthavepassword"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.855" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/high_tower_text"
        android:text="@string/signupclick"
        android:textColor="@color/teal_700"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.926"
        android:foreground="?android:attr/selectableItemBackground"
        />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234" />

</androidx.constraintlayout.widget.ConstraintLayout>